# lazy-rabbit-helper

./: .gitignore  README.md  pyproject.toml  start.sh
etc/: prompt_of_program.yaml  prompt_template.yaml  sticky_note.yaml
src/lazy_rabbit_helper/: async_llm_client.py  common_util.py  llm_service.py  main.py  yaml_config.py
